--- a/estilo/style.css
+++ b/estilo/style.css
@@ -6,7 +6,7 @@
 
 html, body{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background-color: black;
 
 }
@@ -35,4 +35,11 @@ section#telefone{
     background-color: blue;
     background: url('../imagens/frame-iphone.png') no-repeat;
 
+}
+iframe#tela{
+    position: relative;
+    top:80px;
+    left: 22px;
+    height: 471px;
+    width: 269px;
 }
