--- a/estilo/style.css
+++ b/estilo/style.css
@@ -43,3 +43,23 @@ iframe#tela{
     height: 471px;
     width: 269px;
 }
+section#redes-sociais img{
+    width: 60px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.63);
+    box-sizing: border-box;
+
+
+
+}
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img:hover{
+    
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px black;
+    transition: 0.3s;
+
+}
