--- a/estilo/style.css
+++ b/estilo/style.css
@@ -15,7 +15,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
 }
 main{
     position: relative;
